--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Lightning</h1>
+			<div class="blink-bg">Lightning</div>
 		</header>
 			<section id="content">
 				<canvas id="Lightning" data-processing-sources="Lightning.pde">
