--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<script src="processing.js"></script>
 		<style>
 			.blink-bg{
-				color: #fff;
-				padding: 10px;
+				color: #000;
+				padding: 26px;
 				display: inline-block;
 				border-radius: 5px;
 				animation: blinkingBackground 2s infinite;
