--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 		</style>
 	</head>
 	<body>
+		<div class="blink-bg"> 
 		<header>
-			<div class="blink-bg">Lightning</div>
+			<h1>Lightning</h1>
 		</header>
 			<section id="content">
 				<canvas id="Lightning" data-processing-sources="Lightning.pde">
@@ -38,5 +39,6 @@
 <!-- 	    <footer>
 		    Footer
 	    </footer> -->
+		</div>
 	</body>
 </html>
