--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Title</title>
+		<title>Lightning</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
@@ -26,6 +26,7 @@
 				animation: blinkingBackground 7s infinite;
 			      }
 		</style>
+		<audio autoplay loop "{https://youtu.be/LqulfIzufHY}" type="audio/fileextension"/>
 	</head>
 	<body>
 		<div class="blink-bg"> 
@@ -36,6 +37,8 @@
 				<canvas id="Lightning" data-processing-sources="Lightning.pde">
 				</canvas>
 		    </section>
+			<h2>zap zap</h2>
+			<a href="https://github.com/cayeleeg/Lightning">Check out the code it's pretty shocking.</a>
 <!-- 	    <footer>
 		    Footer
 	    </footer> -->
