--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				animation: blinkingBackground 7s infinite;
 			      }
 		</style>
-		<audio autoplay loop "{https://youtu.be/LqulfIzufHY}" type="audio/fileextension"/>
+		<audio autoplay loop "https://youtu.be/LqulfIzufHY" type="audio/fileextension"/>
 	</head>
 	<body>
 		<div class="blink-bg"> 
